[package]
name = "pi-monte-carlo"
version = "0.1.0"
authors = ["Jeroen Knoops <jeroen.knoops@philips.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.1.14", features = ["dummy"] }
rand = "0.8.3"

